--- a/material-dashboard-master/examples/viewbldg.html
+++ b/material-dashboard-master/examples/viewbldg.html
@@ -22,7 +22,7 @@
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    InfoTech
+   InfoTech
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -49,49 +49,42 @@
       </div>
       <div class="sidebar-wrapper">
         <ul class="nav">
-          <li class="nav-item ">
-            <a class="nav-link" href="./dashboard.php">
+          <li class="nav-item">
+            <a class="nav-link" href="./dashboard.html">
               <i class="material-icons">dashboard</i>
               <p>Dashboard</p>
             </a>
           </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="./SetupTenant.php">
+          <li class="nav-item">
+            <a class="nav-link" href="./SetupTenant.html">
               <i class="material-icons">perm_identity</i>
               <p>Set-up Tenant</p>
             </a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="./Setuppersonnel.phpd">
+          <li class="nav-item ">
+            <a class="nav-link" href="./Setuppersonnel.html">
               <i class="material-icons">create</i>
               <p>Set-up Personnel</p>
             </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="./viewinfo.php">
+            <a class="nav-link" href="./viewinfo.html">
               <i class="material-icons">library_books</i>
               <p>Tenant Information</p>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./viewbldg.php">
+          <li class="nav-item active">
+            <a class="nav-link" href="./viewbldg.html">
               <i class="material-icons">create</i>
               <p>Building Information</p>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./tenantreq.php">
-              <i class="material-icons">create</i>
-              <p>Tenant Request</p>
-            </a>
-          </li>
-
         </ul>
       </div>
     </div>
     <div class="main-panel">
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
+       <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
         <div class="container-fluid">
           <div class="navbar-wrapper">
             <a class="navbar-brand" href="#pablo">Diego Silang</a>
@@ -217,6 +210,141 @@
         </div>
       </nav>
       <!-- End Navbar -->
+                  <div class="col-md-12">
+              <div class="card card-plain">
+                <div class="card-header card-header-primary">
+                  <h4 class="card-title mt-0"> Set up Tenant or Lessee </h4>
+                  <p class="card-category"> Associate with building space.</p>
+                </div>
+                <div class="card-body">
+                  <div class="table-responsive">
+                    <table class="table table-hover">
+                      <thead class="">
+                        <th>
+                          ID
+                        </th>
+                        <th>
+                          Name
+                        </th>
+                        <th>
+                          Country
+                        </th>
+                        <th>
+                          City
+                        </th>
+                        <th>
+                          Salary
+                        </th>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>
+                            1
+                          </td>
+                          <td>
+                            Dakota Rice
+                          </td>
+                          <td>
+                            Niger
+                          </td>
+                          <td>
+                            Oud-Turnhout
+                          </td>
+                          <td>
+                            $36,738
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>
+                            2
+                          </td>
+                          <td>
+                            Minerva Hooper
+                          </td>
+                          <td>
+                            Curaçao
+                          </td>
+                          <td>
+                            Sinaai-Waas
+                          </td>
+                          <td>
+                            $23,789
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>
+                            3
+                          </td>
+                          <td>
+                            Sage Rodriguez
+                          </td>
+                          <td>
+                            Netherlands
+                          </td>
+                          <td>
+                            Baileux
+                          </td>
+                          <td>
+                            $56,142
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>
+                            4
+                          </td>
+                          <td>
+                            Philip Chaney
+                          </td>
+                          <td>
+                            Korea, South
+                          </td>
+                          <td>
+                            Overland Park
+                          </td>
+                          <td>
+                            $38,735
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>
+                            5
+                          </td>
+                          <td>
+                            Doris Greene
+                          </td>
+                          <td>
+                            Malawi
+                          </td>
+                          <td>
+                            Feldkirchen in Kärnten
+                          </td>
+                          <td>
+                            $63,542
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>
+                            6
+                          </td>
+                          <td>
+                            Mason Porter
+                          </td>
+                          <td>
+                            Chile
+                          </td>
+                          <td>
+                            Gloucester
+                          </td>
+                          <td>
+                            $78,615
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
       
   <!--   Core JS Files   -->
   <script src="../assets/js/core/jquery.min.js"></script>
